bombers z-index was fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ div.clear {
     top: 0;
     left: 50%;
     width: 300px;
-    height: 200px;
+    height: 160px;
     margin: 20% 0 0 -150px;
     background: #ccc;
     border: 1px solid white;
